[gd_scene load_steps=5 format=2]

[ext_resource path="res://assests/libraries/battle_pokemon.png" type="Texture" id=1]
[ext_resource path="res://Pokemon/Venasaur.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Battle_pokemon.gd" type="Script" id=3]
[ext_resource path="res://assests/libraries/battle_pokemon_selecter.png" type="Texture" id=4]

[node name="Node2D" type="Node2D"]
z_index = 4
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 240.0
margin_bottom = 160.0

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="Pokemons" type="Node2D" parent="Control"]

[node name="Pokemon1" type="Node2D" parent="Control/Pokemons"]
position = Vector2( 1, 2 )

[node name="Pokemon_Sprite" type="Sprite" parent="Control/Pokemons/Pokemon1"]
position = Vector2( 38, 35 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32.8181, 9.00197, 27.6203, 23.8754 )

[node name="Pokemon_name" type="Sprite" parent="Control/Pokemons/Pokemon1"]
position = Vector2( 89, 26 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0.787605, 0.805951, 73.2889, 8.32024 )

[node name="Pokemon_footprint" type="Sprite" parent="Control/Pokemons/Pokemon1"]
position = Vector2( 62, 40 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 110.084, 15.3255, 18.2308, 17.5797 )

[node name="Battle_selector" type="Sprite" parent="Control/Pokemons/Pokemon1"]
position = Vector2( 63, 34 )
texture = ExtResource( 4 )
hframes = 2
frame = 1

[node name="Pokemon2" type="Node2D" parent="Control/Pokemons"]
position = Vector2( 1, 40 )

[node name="Pokemon_Sprite" type="Sprite" parent="Control/Pokemons/Pokemon2"]
position = Vector2( 38, 35 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32.8181, 9.00197, 27.6203, 23.8754 )

[node name="Pokemon_name" type="Sprite" parent="Control/Pokemons/Pokemon2"]
position = Vector2( 89, 26 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0.787605, 0.805951, 73.2889, 8.32024 )

[node name="Pokemon_footprint" type="Sprite" parent="Control/Pokemons/Pokemon2"]
position = Vector2( 62, 40 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 110.084, 15.3255, 18.2308, 17.5797 )

[node name="Battle_selector" type="Sprite" parent="Control/Pokemons/Pokemon2"]
position = Vector2( 63, 34 )
texture = ExtResource( 4 )
hframes = 2

[node name="Pokemon3" type="Node2D" parent="Control/Pokemons"]
position = Vector2( 0, 77 )

[node name="Pokemon_Sprite" type="Sprite" parent="Control/Pokemons/Pokemon3"]
position = Vector2( 38, 35 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32.8181, 9.00197, 27.6203, 23.8754 )

[node name="Pokemon_name" type="Sprite" parent="Control/Pokemons/Pokemon3"]
position = Vector2( 89, 26 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0.787605, 0.805951, 73.2889, 8.32024 )

[node name="Pokemon_footprint" type="Sprite" parent="Control/Pokemons/Pokemon3"]
position = Vector2( 63, 40 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 110.084, 15.3255, 18.2308, 17.5797 )

[node name="Battle_selector" type="Sprite" parent="Control/Pokemons/Pokemon3"]
position = Vector2( 64, 34 )
texture = ExtResource( 4 )
hframes = 2

[node name="Pokemon4" type="Node2D" parent="Control/Pokemons"]
position = Vector2( 111, 15 )

[node name="Pokemon_Sprite" type="Sprite" parent="Control/Pokemons/Pokemon4"]
position = Vector2( 38, 35 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32.8181, 9.00197, 27.6203, 23.8754 )

[node name="Pokemon_name" type="Sprite" parent="Control/Pokemons/Pokemon4"]
position = Vector2( 89, 26 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0.787605, 0.805951, 73.2889, 8.32024 )

[node name="Pokemon_footprint" type="Sprite" parent="Control/Pokemons/Pokemon4"]
position = Vector2( 62, 40 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 110.084, 15.3255, 18.2308, 17.5797 )

[node name="Battle_selector" type="Sprite" parent="Control/Pokemons/Pokemon4"]
position = Vector2( 63, 34 )
texture = ExtResource( 4 )
hframes = 2

[node name="Pokemon5" type="Node2D" parent="Control/Pokemons"]
position = Vector2( 111, 53 )

[node name="Pokemon_Sprite" type="Sprite" parent="Control/Pokemons/Pokemon5"]
position = Vector2( 38, 35 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32.8181, 9.00197, 27.6203, 23.8754 )

[node name="Pokemon_name" type="Sprite" parent="Control/Pokemons/Pokemon5"]
position = Vector2( 89, 26 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0.787605, 0.805951, 73.2889, 8.32024 )

[node name="Pokemon_footprint" type="Sprite" parent="Control/Pokemons/Pokemon5"]
position = Vector2( 62, 40 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 110.084, 15.3255, 18.2308, 17.5797 )

[node name="Battle_selector" type="Sprite" parent="Control/Pokemons/Pokemon5"]
position = Vector2( 63, 34 )
texture = ExtResource( 4 )
hframes = 2

[node name="Pokemon6" type="Node2D" parent="Control/Pokemons"]
position = Vector2( 111, 90 )

[node name="Pokemon_Sprite" type="Sprite" parent="Control/Pokemons/Pokemon6"]
position = Vector2( 38, 35 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32.8181, 9.00197, 27.6203, 23.8754 )

[node name="Pokemon_name" type="Sprite" parent="Control/Pokemons/Pokemon6"]
position = Vector2( 89, 26 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0.787605, 0.805951, 73.2889, 8.32024 )

[node name="Pokemon_footprint" type="Sprite" parent="Control/Pokemons/Pokemon6"]
position = Vector2( 62, 40 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 110.084, 15.3255, 18.2308, 17.5797 )

[node name="Battle_selector" type="Sprite" parent="Control/Pokemons/Pokemon6"]
position = Vector2( 63, 35 )
texture = ExtResource( 4 )
hframes = 2
